--- a/Flink源码系列/1.《从0学习Flink源码》——Flink源码编译及部署.md
+++ b/Flink源码系列/1.《从0学习Flink源码》——Flink源码编译及部署.md
@@ -96,6 +96,28 @@ $ npm run build
 $ npm i node-gyp -g
 ```
 
+以上操作没有问题的话，可以执行flink在打包时执行的npm命令：
+
+```shell
+$ npm ci --cache-max=0 --no-save
+```
+
+如果有报错如下：
+
+![](images/npm-ci报错.jpg)
+
+清理缓存后尝试安装：
+
+```shell
+$ npm cache clear --force
+```
+
+可以先单独打包flink-runtime-web包及其依赖，如果前端包正常后再进行全部模块打包：
+
+```shell
+$ mvn clean install -DskipTests -pl flink-runtime-web -am
+```
+
 执行maven打包命令：
 
 ```shell
@@ -105,7 +127,7 @@ $ mvn clean install -DskipTests
 也可以使用以下命令跳过测试、代码风格以及License检查：
 
 ```shell
-mvn clean install -Dmaven.test.skip=true -Dmaven.javadoc.skip=true -Dcheckstyle.skip=true -Drat.skip=true
+$ mvn clean install -Dmaven.test.skip=true -Dmaven.javadoc.skip=true -Dcheckstyle.skip=true -Drat.skip=true
 ```
 
 出现如下图所示的全篇绿色就说明编译成功了😎
