:fire: 增加Flink的运行监控以及日志采集

--- a/Flink源码系列/12.《从0学习Flink源码》——Window.md
+++ b/Flink源码系列/12.《从0学习Flink源码》——Window.md
@@ -1061,9 +1061,9 @@ public class WindowOperator<K, IN, ACC, OUT, W extends Window>
 }
 ```
 
-从上面WindowOperator的构造方法中看出所需要的有WindowAssigner、StateDescriptor, ?>、InternalWindowFunction以及Trigger。其中的State必须是AppendingState的子类，在Flink中，AppendingState的子类有ListState、AggregatingState、ReducingState以及InternalMergingState。InternalWindowFunction是窗口的计算函数。在Flink的内部使用，不对外暴露。
+从上面WindowOperator的构造方法中看出所需要的有`WindowAssigner`、`StateDescriptor`、`InternalWindowFunction`以及`Trigger`。其中的`State`必须是`AppendingState`的子类，在Flink中，`AppendingState`的子类有`ListState`、`AggregatingState`、`ReducingState`以及`InternalMergingState`。`InternalWindowFunction`是窗口的计算函数。在Flink的内部使用，不对外暴露。
 
-在使用窗口时，通过ProcessWindowFunction指定计算逻辑，在通过WindowOperatorBuilder中的process方法，包装成InternalIterableProcessWindowFunction，也就是InternalWindowFunction的子类，最终提供给WindowOperator，在window中使用的状态是ListState。
+在使用窗口时，通过`ProcessWindowFunction`指定计算逻辑，在通过`WindowOperatorBuilder`中的`process`方法，包装成`InternalIterableProcessWindowFunction`，也就是`InternalWindowFunction`的子类，最终提供给`WindowOperator`，在`window`中使用的状态是`ListState`。
 
 ```java
 public class WindowedStream<T, K, W extends Window> {
@@ -1500,9 +1500,9 @@ public class WindowOperatorBuilder<T, K, W extends Window> {
 }
 ```
 
-如果使用了aggregate实现增量聚合，可以看到窗口中的状态由ListState更换成了可以聚合的AggregatingState，而状态aggregatingState中的聚合函数就是用户提供的aggregateFunction。只要有数据进来时，就会将数据添加状态中，此时就会触发状态中aggregateFunction函数的计算，这样最终的状态中只需要保存聚合后的结果即可。
+如果使用了`aggregate`实现增量聚合，可以看到窗口中的状态由`ListState`更换成了可以聚合的`AggregatingState`，而状态`aggregatingState`中的聚合函数就是用户提供的`aggregateFunction`。只要有数据进来时，就会将数据添加状态中，此时就会触发状态中`aggregateFunction`函数的计算，这样最终的状态中只需要保存聚合后的结果即可。
 
-在上面直接使用AggregateFunction的情况下，无法访问窗口的上下文信息，所以可以讲增量窗口和ProcessWindowFunction结合一起使用，这样在使用增量窗口的同时也可以访问到窗口的信息。
+在上面直接使用`AggregateFunction`的情况下，无法访问窗口的上下文信息，所以可以将增量窗口和`ProcessWindowFunction`结合一起使用，这样在使用增量窗口的同时也可以访问到窗口的信息。
 
 ```java
 public class WindowOperatorBuilder<T, K, W extends Window> {
@@ -1539,7 +1539,7 @@ public class WindowOperatorBuilder<T, K, W extends Window> {
 
 ##### 3. 窗口合并（Session窗口）
 
-我们前面所看的所有逻辑都是忽略掉了窗口不合并的情况，发生窗口合并时，窗口的边界会随着消息的到来而发生改变，这种情况下窗口就会发生合并。我们从WindowOperator.open方法中除了初始化窗口的状态外，同时还会初始化一个新的mergingSetsState用于保存合并后的窗口状态。
+我们前面所看的所有逻辑都是忽略掉了窗口不合并的情况，发生窗口合并时，窗口的边界会随着消息的到来而发生改变，这种情况下窗口就会发生合并。我们从`WindowOperator.open`方法中除了初始化窗口的状态外，同时还会初始化一个新的`mergingSetsState`用于保存合并后的窗口状态。
 
 ```java
 public class WindowOperator<K, IN, ACC, OUT, W extends Window>
@@ -1595,7 +1595,7 @@ public class WindowOperator<K, IN, ACC, OUT, W extends Window>
 }
 ```
 
-相比于之前的窗口，可以合并的窗口的一个难点就在于窗口合并时状态的处理，所以对于可合并的窗口来说必须要求窗口的状态是可以合并的，可以看到必须要求状态是InternalMergingState的子类，也就是InternalListState、InternalAggregatingState和InternalReducingState。可以看到InternalMergingState继承了MergingState，在其基础上实现了mergeNamespace的方法，主要作用是将多个namespace的状态合并到目标namespace。
+相比于之前的窗口，可以合并的窗口的一个难点就在于窗口合并时状态的处理，所以对于可合并的窗口来说必须要求窗口的状态是可以合并的，可以看到必须要求状态是`InternalMergingState`的子类，也就是`InternalListState`、`InternalAggregatingState`和`InternalReducingState`。可以看到`InternalMergingState`继承了`MergingState`，在其基础上实现了`mergeNamespace`的方法，主要作用是将多个`namespace`的状态合并到目标`namespace`。
 
 ```java
 public interface InternalMergingState<K, N, IN, SV, OUT>
