--- a/Flink/02.Flink快速上手.md
+++ b/Flink/02.Flink快速上手.md
@@ -1,4 +1,4 @@
-#### 1. 引入Flink相关jar包
+### 1. 引入Flink相关jar包
 
 ```xml
 <dependency>
@@ -38,7 +38,7 @@
 </dependency>
 ```
 
-#### 2. 批处理WordCount
+### 2. 批处理WordCount
 
 ```java
 public class Flink01_WordCount_Batch_Java {
@@ -80,7 +80,7 @@ public class Flink01_WordCount_Batch_Java {
 }
 ```
 
-#### 3. 有界流处理WordCount
+### 3. 有界流处理WordCount
 
 ```scala
 object Flink02_WordCount_Bounded_Scala {
@@ -109,7 +109,7 @@ object Flink02_WordCount_Bounded_Scala {
 }
 ```
 
-#### 4. 无界流处理WordCount
+### 4. 无界流处理WordCount
 
 ```scala
 object Flink03_WordCount_UnBounded_Scala {
