--- a/Flink/07.Flink中的处理函数.md
+++ b/Flink/07.Flink中的处理函数.md
@@ -1,44 +1,44 @@
 Flink本身提供了多层API，在底层，可以不用定义任何的算子，可以直接使用process操作，可以自定义处理逻辑。Process操作是所有转换算子的概述，对流有绝对的控制权。Process函数也比较抽象，没有具体的操作，所以对于一些常见的简单应用会显得有点麻烦。不过正是因为它的不限定具体做什么，理论上可以用Process函数实现所有的功能。
 
-#### 1. 处理函数分类
+### 1. 处理函数分类
 
-##### 1.1 ProcessFunction
+#### 1.1 ProcessFunction
 
 `ProcessFunction`是最基本的处理函数，基于DataStream直接调用`.process()`时作为参数传入。
 
-##### 1.2 KeyedProcessFunction
+#### 1.2 KeyedProcessFunction
 
 `KeyedProcessFunction`是对流按键分区后的处理函数，基于KeyedStream调用`.process()`时作为参数传入。要想使用定时器（timer），必须基于KeyedStream。
 
-##### 1.3 ProcessWindowFunction
+#### 1.3 ProcessWindowFunction
 
 `ProcessWindowFunction`是开窗之后的处理函数，基于WindowedStream调用`.process()`时作为参数传入。
 
-##### 1.4 ProcessAllWindowFunction
+#### 1.4 ProcessAllWindowFunction
 
 `ProcessAllWindowFunction`是开窗之后的处理函数，与`ProcessWindowFunction`不同的是，`ProcessAllWindowFunction`是基于AllWindowedStream调用`.process()`时作为参数传入。
 
-##### 1.5 CoProcessFunction
+#### 1.5 CoProcessFunction
 
 `CoProcessFunction`是`connect`合并两条流之后的处理函数，基于ConnectedStreams调用`.process()`时作为参数传入。
 
-##### 1.6 ProcessJoinFunction
+#### 1.6 ProcessJoinFunction
 
 `ProcessJoinFunction`是`interval join`连接两条流之后的处理函数，基于IntervalJoined调用`.process()`时作为参数传入。
 
-##### 1.7 BroadcastProcessFunction
+#### 1.7 BroadcastProcessFunction
 
 `BroadcastProcessFunction`是广播连接流处理函数，基于BroadcastConnectedStream调用`.process()`时作为参数传入。这里的广播连接流是一个未keyBy的普通的（DataStream）与一个广播流（BroadcastStream）做连接connect之后的结果。
 
-##### 1.8 KeyedBroadcastProcessFunction
+#### 1.8 KeyedBroadcastProcessFunction
 
 `KeyedBroadcastProcessFunction`是按键分区的广播连接流处理函数，同样是基于BroadcastConnectedStream调用`.process()`时作为参数传入。与`BroadcastProcessFunction`不同的是，这里的广播连接流是一个KeyedStream与广播流（BroadcastStream）做连接之后的结果。
 
-#### 2. ProcessFunction
+### 2. ProcessFunction
 
 在Flink中基本所有的转换算子都提供了对应的函数类接口，处理函数也不例外，它所对应的函数类，就叫做`ProcessFunction`。
 
-##### 2.1 ProcessFunction的使用
+#### 2.1 ProcessFunction的使用
 
 之前的转换算子，一般都只是针对某种具体的操作来定义的，能够拿到的信息有限。比如map算子，只能获取到当前的数据，定义转换之后的格式；像窗口聚合这种复杂的操作，AggregateFunction除了可以获取到数据外，还能获取到当前的状态（以累加器Accumulator的形式出现）。更高级点的，可能还有富函数，比如RichMapFunction，它相比于MapFunction提供了获取运行时上下文的方法`getRuntimeContext`，可以拿到状态，还有并行度以及任务名称之类的运行信息。
 
@@ -78,7 +78,7 @@ public class ProcessFunctionExample {
 }
 ```
 
-##### 2.2 ProcessFunction源码
+#### 2.2 ProcessFunction源码
 
 `ProcessFunction`继承了`AbstractRichFunction`，有两个泛型参数：I表示Input，O表示Output。内部单独定义了两个方法，一个是必须要实现的抽象方法`processElement`，另一个是非抽象方法`onTimer`。
 
@@ -119,7 +119,7 @@ public abstract class ProcessFunction<I, O> extends AbstractRichFunction {
 }
 ```
 
-###### 2.2.1 抽象方法processElement
+##### 2.2.1 抽象方法processElement
 
 这个方法是用于处理元素，定义了处理元素的核心逻辑。这个方法对于流中的每一个元素都会调用一次，参数有三个：输入值value，运行时上下文ctx，收集器out。方法没有返回值，处理之后的数据通过收集器out来定义。
 
@@ -157,7 +157,7 @@ public abstract class ProcessFunction<I, O> extends AbstractRichFunction {
 
 - out：收集器（类型为Collector），用于返回输出数据。使用方法于flatMap算子中的收集器完全一样，可以调用多次也可以不调用。
 
-###### 2.2.2 非抽象方法onTimer
+##### 2.2.2 非抽象方法onTimer
 
 用于定义定时触发的操作，这个方法只有在注册好的定时器触发的时候才会调用，而定时器是通过定时服务TimerService来注册的。其实onTimer中定义的，就是当定时器触发后需要做的操作，本质上就是一个基于时间的回调方法，通过时间的进展来触发。
 
@@ -165,17 +165,17 @@ public abstract class ProcessFunction<I, O> extends AbstractRichFunction {
 
 通过`onTimer`方法做定时触发，那么就可以用ProcessFunction实现数据按照时间分组、定时触发计算输出结果。需要注意的是在Flink中，只有按键分区流KeyedStream才支持设置定时器的操作。
 
-#### 3. KeyedProcessFunction
+### 3. KeyedProcessFunction
 
 在Flink程序中，为了实现数据的聚合统计，或者开窗之类的功能，一般都要使用keyBy算子对数据流进行按键分区，得到KeyedStream。也就是指定一个键，按照它的哈希值将数据分成不同的组，然后分配到不同的并行子任务上执行计算。
 
 只有在KeyedStream中才支持TimerService设置定时器的操作。所以一般情况下，都是先进行keyBy，然后定义处理操作，所以代码中使用率比较高的反倒是KeyedProcessFunction，反倒是最基本的ProcessFunction到没有那么高的使用率。
 
-##### 3.1 KeyedProcessFunction的使用
+#### 3.1 KeyedProcessFunction的使用
 
 KeyedProcessFunction可以认为是ProcessFunction的一个扩展，只要基于keyBy之后的KeyedStream，直接调用`.process()`方法这时需要的参数就是KeyedProcessFunction的实现类。
 
-##### 3.2 Timer和TimerService
+#### 3.2 Timer和TimerService
 
 KeyedProcessFunction的一大特色就是可以灵活使用定时器。定时器（Timer）是处理函数中进行时间相关操作的主要机制。在`.onTimer()`方法中可以实现定时处理的逻辑，而它能触发的前提是，之前注册过定时器并且现在已经到了触发的时间了。注册定时器的功能，是通过上下文提供的定时服务（TimerService）来实现的。
 
@@ -246,7 +246,7 @@ public interface TimerService {
 
 Flink的定时器同样具有容错性，它和状态一起都会被保存到一致性检查点（checkpoint）当中。当发生故障时，Flink会重启并读取检查点中的状态，恢复定时器。如果是基于处理时间的定时器，有可能会出现已经过期的情况，这时他们会在重启时立刻被触发。
 
-##### 3.3 KeyedProcessFunction源码
+#### 3.3 KeyedProcessFunction源码
 
 `KeyedProcessFunction`也是继承了`AbstractRichFunction`，泛型参数相比于`ProcessFunction`多了一个K，这是当前按键分区的key的类型。同时必须要实现一个抽象方法`.processElement`，用来处理流中的每一个数据；另外还有一个非抽象方法`.onTimer()`，用来定义定时器触发时的回调函数。
 
@@ -287,8 +287,8 @@ public abstract class KeyedProcessFunction<K, I, O> extends AbstractRichFunction
 }
 ```
 
-#### 4. 窗口处理函数
+### 4. 窗口处理函数
 
 
 
-#### 5. 应用案例
+### 5. 应用案例
