--- a/Flink/08.Flink中的多流转换.md
+++ b/Flink/08.Flink中的多流转换.md
@@ -1,4 +1,4 @@
-#### 1. 分流
+### 1. 分流
 
 在Flink的使用过程中，经常可能会遇到将一个流的数据拆分成多个流，此时就需要将一个DataStream拆分成独立的两个或多个DataStream，一般情况下可能需要根据一些条件将不同的数据过滤出来写入不同的流。
 
@@ -43,11 +43,11 @@ public class SplitStreamByOutputTag {
 }
 ```
 
-#### 2. 合流
+### 2. 合流
 
-##### 2.1 基本合流操作
+#### 2.1 基本合流操作
 
-###### 2.1.1 Union
+##### 2.1.1 Union
 
 最简单的合流操作就是将多条流合并在一起，在Flink中的算子为Union。Union操作要求所有合并的流的类型必须一致，合并之后的新流会包含流中的所有元素，数据类型不变。这种操作比较简单粗暴，就类似于高速路上的岔道，两个道路的车直接汇入主路一样。需要注意的是，Union操作的参数可以是多个DataStream，最后的结果也是DataStream。
 
@@ -95,7 +95,7 @@ public class UnionExample {
 }
 ```
 
-###### 2.1.2 Connect
+##### 2.1.2 Connect
 
 流的Union操作虽然简单粗暴，但是严重受限于数据类型不能改变，所以在实际的应用中比较少。除了Union之外，还有一种合流的操作Connect。为了处理更灵活，Connect允许流的数据类型不同，但是合并后的流只能是一种数据类型，所以有一种新的数据类型ConnectedStream。Connect可以被看作是形式上的统一，两个流被放在了一个流中，事实上两个流内部的数据都是独立的，要想得到新的DataStream，就需要进一步定义一个`co-process`转换操作，对两个不同的流的数据，分别进行怎样的转换和处理，最终得到统一的输出类型。
 
@@ -372,13 +372,13 @@ public class UnionExample {
   }
   ```
 
-##### 2.2 基于时间的合流操作
+#### 2.2 基于时间的合流操作
 
 对于两条流的合并，有时候我们不是将两条流的数据简单的合并在一起，而是根据某个字段将其匹配起来，这点有点像关系型数据库中的join操作，事实上，Flink中的connect操作，就可以通过keyBy指定分区键然后合并，实现了类似于SQL中的join操作。使用connect以及处理函数，可以实现双流合并的大多数场景。
 
 不过处理函数处理底层接口，来处理一些具体的场景还是比较抽象的，比如要统计固定的时间内两条流的匹配情况，就需要设置定时器，自定义触发器的逻辑才可以实现，所以Flink提供了两种内置的join算子，以及coGroup算子。
 
-###### 2.2.1 Window Join
+##### 2.2.1 Window Join
 
 基于时间的操作，最基本的就是时间窗口。Flink提供了一个窗口连接算子（Window Join），可以定义时间窗口，并将两条流中共享一个公共分区键的数据放在窗口中进行配对处理。
 
@@ -455,7 +455,7 @@ public class WindowJoinExample {
 
 `Window Join`在底层也是调用了`CoGroup`去做了实现，并通过`JoinCoGroupFunction`的构造方法将`JoinFunction`转换成了`JoinCoGroupFunction`进行处理。
 
-###### 2.2.2 Interval Join
+##### 2.2.2 Interval Join
 
 在某些场景下，我们要处理的时间间隔可能不是固定的，`Window Join`很明显不能满足。Flink提供了一个`Interval Join`的合流操作，该算子是针对一条流中的每一个数据，开辟出其时间戳前后的一段时间间隔，看这个期间内是否有来自另一个流的数据匹配。
 
@@ -536,7 +536,7 @@ public class IntervalJoinExample {
 
 `Interval Join`中只能调用`process`，然后传入处理函数`ProcessJoinFunction`，`Interval Join`的底层是调用了`connect`进行处理。
 
-###### 2.2.3 Window CoGroup
+##### 2.2.3 Window CoGroup
 
 除了`Window Join`和`Interval Join`之外，还提供了`Window CoGroup`操作。因为`Window Join`的底层就是`Window CoGroup`实现的，所以和`Window Join`的用法非常类似，也是将两条流合并后开窗处理匹配的元素，调用时只需要将`join`换成`coGroup`就好了。
 
