--- a/Flink/97.Flink日志文件配置.md
+++ b/Flink/97.Flink日志文件配置.md
@@ -1,4 +1,4 @@
-#### 1. 各组件版本
+### 1. 各组件版本
 
 |     组件     |  版本  |
 | :----------: | :----: |
@@ -7,9 +7,9 @@
 |   logstash   | 7.13.0 |
 |    flink     | 1.13.6 |
 
-#### 2. Flink日志文件配置
+### 2. Flink日志文件配置
 
-##### 2.1 设置日志按大小滚动生成文件
+#### 2.1 设置日志按大小滚动生成文件
 
 因为在正常的情况下，Flink的流数据是非常大的，有时候会使用print()打印数据自己查看，有时候为了查找问题会开启debug日志，就会导致日志文件非常大，通过Web UI查看对应的日志文件是会非常卡，所以首先将日志文件按照大小滚动生成文件，我们在查看时不会因为某个文件非常大导致Web UI界面卡，没法查看。
 
@@ -58,7 +58,7 @@ logger.netty.name = org.apache.flink.shaded.akka.org.jboss.netty.channel.Default
 logger.netty.level = OFF
 ```
 
-##### 2.2 设置日志写入Kafka集群
+#### 2.2 设置日志写入Kafka集群
 
 针对按照日志文件大小滚动生成文件的方式，可能因为某个错误的问题，需要看好多个日志文件，所以可以把日志文件通过KafkaAppender写入到kafka中，然后通过ELK等进行日志搜索甚至是分析告警。
 
@@ -131,7 +131,7 @@ appender.kafka.layout.pattern = {"log_level":"%p","log_timestamp":"%d{ISO8601}",
 
 针对于不同的Flink模式，需要在`flink/lib`目录下放入的jar包也有所不同：
 
-###### 2.2.1 Flink on Yarn
+##### 2.2.1 Flink on Yarn
 
 ```shell
 # 根据kafka的版本放入kafka-clients
@@ -197,7 +197,7 @@ env.java.opts.jobmanager: -DyarnContainerId=$CONTAINER_ID
 }
 ```
 
-###### 2.2.2 Flink Standalone集群
+##### 2.2.2 Flink Standalone集群
 
 ```shell
 # 根据kafka的版本放入kafka-clients
@@ -208,11 +208,11 @@ jackson-core-2.13.3.jar
 jackson-databind-2.13.3.jar
 ```
 
-#### 3. Flink日志接入Elasticsearch
+### 3. Flink日志接入Elasticsearch
 
 日志写入Kafka之后可以通过Logstash接入elasticsearch，然后通过kibana进行查询或搜索，安装logstash的步骤可以参考官网。
 
-##### 3.1 配置Logstash
+#### 3.1 配置Logstash
 
 将以下内容写入`config/logstash-sample.conf`文件中
 
@@ -243,9 +243,9 @@ output {
 bin/logstash -f ./config/logstash-sample.conf 2>&1 >./logs/logstash.log &
 ```
 
-##### 3.2 利用kibana搜索日志
+#### 3.2 利用kibana搜索日志
 
-###### 3.2.1 创建索引模式
+##### 3.2.1 创建索引模式
 
 ![](images/kibana-index-pattern.jpg)
 
@@ -257,7 +257,7 @@ bin/logstash -f ./config/logstash-sample.conf 2>&1 >./logs/logstash.log &
 
 ![](images/kibana-index-pattern-time.jpg)
 
-###### 3.2.2 通过Discover搜索日志
+##### 3.2.2 通过Discover搜索日志
 
 打开Discover选择刚刚创建的索引模式，在左上角可以添加筛选条件。
 
