--- a/Flink/98.使用Prometheus+Grafana打造Flink监控页面.md
+++ b/Flink/98.使用Prometheus+Grafana打造Flink监控页面.md
@@ -1,4 +1,4 @@
-#### 1. 下载对应的安装包
+### 1. 下载对应的安装包
 
 |     组件      |  版本  |                           下载地址                           |
 | :-----------: | :----: | :----------------------------------------------------------: |
@@ -7,9 +7,9 @@
 | node_exporter | 1.3.1  | [官网](https://github.com/prometheus/node_exporter/releases/download/v1.3.1/node_exporter-1.3.1.linux-amd64.tar.gz) |
 |    Grafana    | 8.5.6  | [官网](https://dl.grafana.com/enterprise/release/grafana-enterprise-8.5.6-1.x86_64.rpm) |
 
-#### 2. 安装并运行
+### 2. 安装并运行
 
-##### 2.1 安装pushgateway
+#### 2.1 安装pushgateway
 
 将pushgateway解压到指定目录后，直接运行pushgateway即可
 
@@ -43,7 +43,7 @@ systemctl start pushgateway
 systemctl status pushgateway
 ```
 
-##### 2.2 安装node_exporter
+#### 2.2 安装node_exporter
 
 将node_exporter解压到指定目录后，直接运行node_exporter即可
 
@@ -77,7 +77,7 @@ systemctl start node_exporter
 systemctl status node_exporter
 ```
 
-##### 2.3 安装Prometheus
+#### 2.3 安装Prometheus
 
 解压Prometheus到安装目录，并修改目录下的`prometheus.yml`配置文件：
 
@@ -160,7 +160,7 @@ systemctl start prometheus
 systemctl status prometheus
 ```
 
-##### 2.4 安装Grafana
+#### 2.4 安装Grafana
 
 ```shell
 wget https://dl.grafana.com/enterprise/release/grafana-enterprise-9.0.2-1.x86_64.rpm
@@ -177,13 +177,13 @@ sudo systemctl start grafana-server
 
 ![](images/grafana-login.jpg)
 
-#### 3. 配置Grafana数据源
+### 3. 配置Grafana数据源
 
 进入`Setting`中选择`Add Data source`即可添加数据源，选择prometheus即可，添加完成后保存测试。
 
 ![](images/grafana-prometheus.jpg)
 
-#### 4. 配置Flink上报Metrics
+### 4. 配置Flink上报Metrics
 
 修改`flink-conf.yaml`配置文件，新增如下配置：
 
@@ -212,7 +212,7 @@ bin/flink run -d -t yarn-per-job ./examples/streaming/TopSpeedWindowing.jar
 
 ![](images/pushgateway-metrics.jpg)
 
-####  5. 登陆Grafana配置Flink监控面板
+###  5. 登陆Grafana配置Flink监控面板
 
 访问Grafana的dashboards页面，下载Flink的dashboards模板，官网下载地址`https://grafana.com/grafana/dashboards/`
 
