--- a/Flink/03.Flink运行环境.md
+++ b/Flink/03.Flink运行环境.md
@@ -8,7 +8,7 @@
 bin/start-cluster.sh
 ```
 
-![](http://typora-image.test.upcdn.net/images/local-start.png)
+![](https://yanko24-note.oss-cn-zhangjiakou.aliyuncs.com/flink/local-start.png)
 
 ##### 1.1.2 查看Web UI界面
 
@@ -16,7 +16,7 @@ bin/start-cluster.sh
 http://虚拟机地址:8081
 ```
 
-![](http://typora-image.test.upcdn.net/images/local-web.png)
+![](https://yanko24-note.oss-cn-zhangjiakou.aliyuncs.com/flink/local-web.png)
 
 #### 1.2 命令行提交应用
 
@@ -33,11 +33,11 @@ bin/flink run \
 - -d 表示提交后退出客户端
 - -c 全类名和jar包位置
 
-![](http://typora-image.test.upcdn.net/images/submit-local.png)
+![](https://yanko24-note.oss-cn-zhangjiakou.aliyuncs.com/flink/submit-local.png)
 
 在浏览器中查看执行情况
 
-![](http://typora-image.test.upcdn.net/images/stdout-local.png)
+![](https://yanko24-note.oss-cn-zhangjiakou.aliyuncs.com/flink/stdout-local.png)
 
 在日志中查看执行结果
 
@@ -335,3 +335,8 @@ high-availability.zookeeper.path.root: /flink-yarn
 high-availability.cluster-id: /flink-yanr-ha
 ```
 
+---
+
+<div align=center>
+    <font color='red' size=5>关注微信公众号《零基础学大数据》回复【Flink】领取全部PDF</font>
+</div>
