--- a/Flink/05.Flink中DataStream常用算子.md
+++ b/Flink/05.Flink中DataStream常用算子.md
@@ -1,10 +1,10 @@
 其实对于所有的计算框架都是一样的，都分为以下四部分：
 
-![](http://yanko.test.upcdn.net/images/flink%E6%95%B0%E6%8D%AE%E5%A4%84%E7%90%86%E6%B5%81%E7%A8%8B.jpg)
+![](https://yanko24-note.oss-cn-zhangjiakou.aliyuncs.com/flink/flink%E6%95%B0%E6%8D%AE%E5%A4%84%E7%90%86%E6%B5%81%E7%A8%8B.jpg)
 
 Flink中提供的一些Source、Transform算子以及Sink如下：
 
-![](http://yanko.test.upcdn.net/images/flink%E6%B5%81%E5%A4%84%E7%90%86.jpg)
+![](https://yanko24-note.oss-cn-zhangjiakou.aliyuncs.com/flink/flink%E6%B5%81%E5%A4%84%E7%90%86.jpg)
 
 ### 1. Environment
 
@@ -471,3 +471,9 @@ Flink引入了三种模式，分别是：`STREAMING(默认)`、`BATCH`和`AUTOMA
   ```
 
 建议配置执行模式时在提交作业的命令行中配置，这样对于一个作业来说更加灵活。
+
+---
+
+<div align=center>
+    <font color='red' size=5>关注微信公众号《零基础学大数据》回复【Flink】领取全部PDF</font>
+</div>
