--- a/Flink/07.Flink中的处理函数.md
+++ b/Flink/07.Flink中的处理函数.md
@@ -292,3 +292,9 @@ public abstract class KeyedProcessFunction<K, I, O> extends AbstractRichFunction
 
 
 ### 5. 应用案例
+
+---
+
+<div align=center>
+    <font color='red' size=5>关注微信公众号《零基础学大数据》回复【Flink】领取全部PDF</font>
+</div>
