--- a/Flink/08.Flink中的多流转换.md
+++ b/Flink/08.Flink中的多流转换.md
@@ -616,5 +616,8 @@ public class CoGroupExample {
 }
 ```
 
+---
 
-
+<div align=center>
+    <font color='red' size=5>关注微信公众号《零基础学大数据》回复【Flink】领取全部PDF</font>
+</div>
