--- a/Flink/95.Flink日志文件配置.md
+++ b/Flink/95.Flink日志文件配置.md
@@ -262,3 +262,9 @@ bin/logstash -f ./config/logstash-sample.conf 2>&1 >./logs/logstash.log &
 打开Discover选择刚刚创建的索引模式，在左上角可以添加筛选条件。
 
 ![](images/kibana-log-discover.jpg)
+
+---
+
+<div align=center>
+    <font color='red' size=5>关注微信公众号《零基础学大数据》回复【Flink】领取全部PDF</font>
+</div>
