--- a/Flink/97.Flink中如何判断需要几个slot以及任务链的划分.md
+++ b/Flink/97.Flink中如何判断需要几个slot以及任务链的划分.md
@@ -191,3 +191,9 @@ object Flink01_WordCount_Chain_Scala {
 ```
 
 最后的结果是socket是一个任务链，flatMap和map合并成一个任务链，keyBy后合并成一个任务链。从flatMap重新开始一个新的任务链。如果使用`disableOperatorChaining`将会把flatMap单独切分一个任务链，不会和map以及socket合并。
+
+---
+
+<div align=center>
+    <font color='red' size=5>关注微信公众号《零基础学大数据》回复【Flink】领取全部PDF</font>
+</div>
