--- a/Flink/01.Flink简介.md
+++ b/Flink/01.Flink简介.md
@@ -20,11 +20,15 @@ Flink是为分布式、高性能、随时可用以及准确的流处理应用程
 
 #### 2.3 分层API
 
-![](http://yanko.test.upcdn.net/images/Flink%20API.jpg)
+![](https://yanko24-note.oss-cn-zhangjiakou.aliyuncs.com/flink/Flink_API.jpg)
 
 ### 3. Flink和Spark
 
 Spark和Flink一开始都有同一个梦想，都希望可以使用一个技术把流处理和批处理统一起来。Spark是以批处理为根本，并尝试在批处理之上支持流计算；Flink是以流处理为根本，在流处理上支持批处理。Spark和Flink的主要区别就是计算模型不同，Spark采用了微批处理模型，而Flink采用了基于操作符的连续流模型。
 
+---
 
+<div align=center>
+    <font color='red' size=5>关注微信公众号《零基础学大数据》回复【Flink】领取全部PDF</font>
+</div>
 
