更新图片链接

--- a/Flink源码系列/01.《从0学习Flink源码》——Flink源码编译及部署.md
+++ b/Flink源码系列/01.《从0学习Flink源码》——Flink源码编译及部署.md
@@ -48,7 +48,7 @@ $ mvn clean install -DskipTests
 
 在编译过程中可能出现`flink-runtime-web`模块编译报错，如下：
 
-![](images/编译flink-runtime-web.png)
+![](https://yanko24-note.oss-cn-zhangjiakou.aliyuncs.com/flink-sourcecode/compile-flink-runtime-web.png)
 
 进入`flink-runtime-web/web-dashboard`目录下，删除`node_modules`目录，执行以下操作：
 
@@ -69,7 +69,7 @@ $ npm run build
 
 继续报错：
 
-![](images/npm安装报错.png)
+![](https://yanko24-note.oss-cn-zhangjiakou.aliyuncs.com/flink-sourcecode/npm-install-error.png)
 
 报错显示找不到包`@ant-design/icons-angular/icons`，手动安装：
 
@@ -88,7 +88,7 @@ $ npm run build
 
 如果打包还报错如下：
 
-![](images/web-build.png)
+![](https://yanko24-note.oss-cn-zhangjiakou.aliyuncs.com/flink-sourcecode/web-build.png)
 
 可以手动安装node-gyp包：
 
@@ -104,7 +104,7 @@ $ npm ci --cache-max=0 --no-save
 
 如果有报错如下：
 
-![](images/npm-ci报错.jpg)
+![](https://yanko24-note.oss-cn-zhangjiakou.aliyuncs.com/flink-sourcecode/npm-ci-error.jpg)
 
 清理缓存后尝试安装：
 
@@ -132,7 +132,7 @@ $ mvn clean install -Dmaven.test.skip=true -Dmaven.javadoc.skip=true -Dcheckstyl
 
 出现如下图所示的全篇绿色就说明编译成功了😎
 
-![](images/flink-1.13.6-complier.jpg)
+![](https://yanko24-note.oss-cn-zhangjiakou.aliyuncs.com/flink-sourcecode/flink-1.13.6-complier.jpg)
 
 #### 3. 在本地启动测试
 
@@ -144,7 +144,7 @@ $ ./bin/start-cluster.sh
 $ vi ./conf/flink-conf.yaml
 ```
 
-![](images/flink-1.13.6-webui.png)
+![](https://yanko24-note.oss-cn-zhangjiakou.aliyuncs.com/flink-sourcecode/flink-1.13.6-webui.png)
 
 #### 4. 简单程序WordCount测试
 
@@ -240,3 +240,9 @@ $ bin/flink run --detached -c com.yankee.wordcount.SocketWindowWordCount /Users/
 ```yaml
 rest.flamegraph.enabled: true
 ```
+
+---
+
+<div align=center>
+    <font color='red' size=5>关注微信公众号《零基础学大数据》回复【Flink】领取全部PDF</font>
+</div>
