--- a/Flink源码系列/02.《从0学习Flink源码》——构建源码测试环境.md
+++ b/Flink源码系列/02.《从0学习Flink源码》——构建源码测试环境.md
@@ -6,7 +6,7 @@
 
 #### 2. 导入IDEA
 
-![](images/导入IDEA.png)
+![](https://yanko24-note.oss-cn-zhangjiakou.aliyuncs.com/flink-sourcecode/import-IDEA.png)
 
 导入IDEA之后，我们就可以看到flink的包结构，包含了很多的包，我们接下来大概分析一下对应的包都有什么作用。
 
@@ -273,4 +273,10 @@
 
 运行flink-tests模块下scheduling包下的AdaptiveSchedulerITCase案例，运行成功，没有任何问题。
 
-![](images/runtests.png)
+![](https://yanko24-note.oss-cn-zhangjiakou.aliyuncs.com/flink-sourcecode/runtests.png)
+
+---
+
+<div align=center>
+    <font color='red' size=5>关注微信公众号《零基础学大数据》回复【Flink】领取全部PDF</font>
+</div>
