--- a/Flink源码系列/04.《从0学习Flink源码》——JobManager启动过程.md
+++ b/Flink源码系列/04.《从0学习Flink源码》——JobManager启动过程.md
@@ -8,7 +8,7 @@
 
 该类位于`flink-runtime`模块下，位于包`entrypoint`中，我们可以先看看这个类的一个继承结构：
 
-![](images/StandaloneSessionClusterEntrypoint.png)
+![](https://yanko24-note.oss-cn-zhangjiakou.aliyuncs.com/flink-sourcecode/StandaloneSessionClusterEntrypoint.png)
 
 从上图可以看到`StandaloneSessionClusterEntrypoint`继承自`SessionClusterEntrypoint`，而`SessionClusterEntrypoint`又继承自`ClusterEntrypoint`，`ClusterEntrypoint`实现了`FatalErrorHandler`和`AutoCloseableAsync`两个接口。
 
@@ -81,7 +81,7 @@ public static <T> T parseParametersOrExit(
 
 接下来我们继续看看`CommandLineParser`对象的方法parse是如何解析args参数的，parse方法之后调用了`flink-runtime`模块下`entrypoint.parser`包下的`CommandLineParser#parse`方法，parse方法调用了`commons-cli`组件中`DefaultParser#parse`方法进行了具体args的参数解析。大致的流程如下：
 
-![](images/StandaloneSessionClusterEntrypoint-parseArgs.png)
+![](https://yanko24-note.oss-cn-zhangjiakou.aliyuncs.com/flink-sourcecode/StandaloneSessionClusterEntrypoint-parseArgs.png)
 
 #### 4. loadConfiguration
 
@@ -571,7 +571,7 @@ public interface DispatcherResourceManagerComponentFactory {
 }
 ```
 
-![](images/DefaultDispatcherResourceManagerComponentFactory.png)
+![](https://yanko24-note.oss-cn-zhangjiakou.aliyuncs.com/flink-sourcecode/DefaultDispatcherResourceManagerComponentFactory.png)
 
 接下来看`DefaultDispatcherResourceManagerComponentFactory#create`方法的具体内容：
 
@@ -771,7 +771,7 @@ public DispatcherResourceManagerComponent create(
 
 上面中创建资源管理器对应的在下面的类中都有自己的实现：
 
-![](images/DispatcherResourceManagerComponent.png)
+![](https://yanko24-note.oss-cn-zhangjiakou.aliyuncs.com/flink-sourcecode/DispatcherResourceManagerComponent.png)
 
 我们接下来只看看在`StandaloneResourceManagerFactory`中的具体实现：
 
@@ -812,10 +812,16 @@ protected ResourceManager<ResourceID> createResourceManager(
 
 到这里，整个Flink集群的启动流程就差不多了，大致流程图如下，其中有一些方法的内部如果自己感兴趣可以继续深入看看。
 
-![](images/StandaloneSessionClusterEntrypoint-start.png)
+![](https://yanko24-note.oss-cn-zhangjiakou.aliyuncs.com/flink-sourcecode/StandaloneSessionClusterEntrypoint-start.png)
 
 #### 7. 总结
 
 通过对Flink集群启动流程的代码的阅读，了解了Flink集群启动的一个简单流程，总体来说包含四个步骤，分别是：解析参数`parseParametersOrExit`、加载配置`loadConfiguration`、构建`StandaloneSessionClusterEntrypoint`对象、启动集群`runClusterEntrypoint`。具体流程如下：
 
-![](images/StandaloneSessionClusterEntrypoint流程.png)
+![](https://yanko24-note.oss-cn-zhangjiakou.aliyuncs.com/flink-sourcecode/StandaloneSessionClusterEntrypoint-process.png)
+
+---
+
+<div align=center>
+    <font color='red' size=5>关注微信公众号《零基础学大数据》回复【Flink】领取全部PDF</font>
+</div>
