--- a/Flink源码系列/05.《从0学习Flink源码》——TaskManager启动流程.md
+++ b/Flink源码系列/05.《从0学习Flink源码》——TaskManager启动流程.md
@@ -483,3 +483,9 @@ public final void start() {
 #### 5. 总结
 
 该篇文章大概分析了`TaskManager`的入口类`TaskManagerRunner`的源码，分析了整个main方法的执行流程。其中有很多部分和`JobManager`的实现有些类似，当然也有很多`TaskManagerServices`中管理的服务我们没有深入分析，感兴趣的小伙伴可以自己下去针对这部分的源码分析一波。👻
+
+---
+
+<div align=center>
+    <font color='red' size=5>关注微信公众号《零基础学大数据》回复【Flink】领取全部PDF</font>
+</div>
