--- a/Flink源码系列/11.《从0学习Flink源码》——State.md
+++ b/Flink源码系列/11.《从0学习Flink源码》——State.md
@@ -628,3 +628,9 @@ public interface KeyedStateFactory {
 在`AbstractKeyedStateBackend`中，`getOrCreateKeyedState`方法中，当`kvState`为空时，通过`TtlStateFactory`类创建`kvState`。在`TtlStateFactory.createStateAndWrapWithTtlIfEnabled`方法中，如果没有设置TTL的情况下，状态的创建最后还是在`KeyedStateFactory#createInternalState`，方法最后在`KeyedStateFactory`中没有提供实现，由不同的状态后端自行实现。
 
 可以看到在`KeyedStateBackend#getPartitionedState`中，除了`StateDescriptor`参数之外，还有`namespace`和`namespace`类型的序列化器，而在`DefaultKeyedStateStore#getPartitionedState`中创建对象的时候指定了`namespace`和`namespace`类型的序列化器，这两个值分别是`VoidNamespace.INSTANCE`和`VoidNamespaceSerializer.INSTANCE`，为什么这块要引入`namespace`呢？
+
+---
+
+<div align=center>
+    <font color='red' size=5>关注微信公众号《零基础学大数据》回复【Flink】领取全部PDF</font>
+</div>
