--- a/Flink源码系列/12.《从0学习Flink源码》——Window.md
+++ b/Flink源码系列/12.《从0学习Flink源码》——Window.md
@@ -2112,3 +2112,9 @@ public class NullByteKeySelector<T> implements KeySelector<T, Byte> {
 #### 10. 总结
 
 该篇文章从Keyed Window和Non-Keyed Window开始，分析了窗口的内部实现，以及在窗口中有着不可替代作用的Trigger和Timer。在最后也从窗口的计算方面从内部查看了全量窗口ProcessWindowFunction以及增量窗口AggregatingFunction的实现的具体区别，也从源码角度彻底了解了Keyed Window和Non-Keyed Window的区别。
+
+---
+
+<div align=center>
+    <font color='red' size=5>关注微信公众号《零基础学大数据》回复【Flink】领取全部PDF</font>
+</div>
